made a comment to Anil --not sure if I agree with reviewer -- its a prefernce comment

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -605,12 +605,20 @@ In our revised version we also include celebA faces where $z^{(0)}$ is sampled f
 }
 
 
-
+{\color{blue}
 23. Section VI.E. It is better to stick with the same order of the datasets for all the tasks
+}
 
 {\color{red} We have updated the order to be Omniglot, Sprites, CelebA for all experiment sections.}
 
-24. Section VI.E.3. Phrases "less negative log-likelihood" and "more negative" are very confusing, as it seems like log-likelihood is still used whereas "negative log-likelihood" is another popular measure. It is better to just say "larger" and "smaller"
+{\color{blue}
+24. Section VI.E.3. Phrases ``less negative log-likelihood'' and ``more negative'' are very confusing, as it seems like log-likelihood is still used whereas ``negative log-likelihood'' is another popular measure. It is better to just say ``larger'' and ``smaller''
+}
+
+\hl{I dont know if I agree with this?}
+
+
+
 25. Section VI.F.1. Second paragraph, first sentence implies that there will be "second" with discussion DAAE with 2D 10-GMM
 26. Section VI.G. It would be good to provide time estimates here to understand how much longer iDAAE takes to train
 27. Section VII. First two paragraphs can be safely skipped.
