comment on updating refs

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -634,9 +634,14 @@ In our revised version we also include celebA faces where $z^{(0)}$ is sampled f
 27. Section VII. First two paragraphs can be safely skipped.
 }
 
-\hl{Anil -- If people read the whole paper these can go, but if not maybe not?}
+\hl{Anil -- If people read the whole paper these can go, but if not, maybe not?}
 
+{\color{blue}
 28. References. It is better to cite published version of the works rather than their preprints from arxiv, like in [8] - Proceeding of the 31 AAAI Conference on Artificial Intelligence, or in [9] arXiv reference is redundant
+}
+
+{\color{red} In the revised version we have updated reference [8] and removed the redunant arXiv reference in [9] and all other redunant arXiv references.}
+
 29. Appendix A. It is odd to use different names for the same lemmas as in the main body of the paper.
 30. Appendix A. Proof of Lemma A.1. "Similar to proof in Bengio [3]" looks like it was not supposed to be there.
 31. Appendix A. There is no point to state the theorem here as its proof has been provided in the main body of the paper. 
