addressing minor comments -- fix phrasing of contributions

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -651,7 +651,7 @@ In our revised version we also include celebA faces where $z^{(0)}$ is sampled f
 {\color{red} In the revised version we have re-numbered the Lemmas and Proofs so that they are consistent between the main body of text and the appendix.\\}
 
 {\color{blue}
-30. Appendix A. Proof of Lemma A.1. "Similar to proof in Bengio [3]" looks like it was not supposed to be there.\\
+30. Appendix A. Proof of Lemma A.1. ``Similar to proof in Bengio [3]'' looks like it was not supposed to be there.\\
 }
 
 {\color{red} This is supposed to be there. The proof is similar.\\}
@@ -662,17 +662,36 @@ In our revised version we also include celebA faces where $z^{(0)}$ is sampled f
 
 {\color{red} In the reivsed version we have removed the theorem from the appendix.\\}
 
+{\color{blue}
 Minor notes:
-1. Page 1, left column, row 24. "...encoded data in THE latent space" - missing article
+1. Page 1, left column, row 24. ``...encoded data in THE latent space'' - missing article\\
+}
+
+We have addressed this in our revised version.\\ 
+
+{\color{blue}
 2. Caption for Figure 1. All the models are mentioned both with their names and acronyms except Denoising Variational Autoencoders
-3. Page 2, left column, rows 30-32. "Methods to sample denoising adversarial autoencoders through Markov-Chain sampling". Should they sample synthetic data points rather than autoencoders?
-4. Page 3, left column, rows 9-12. "In the second step, a random variable ... the Hadamard product" - missing verb
-5. Page 3, left column, row 33. "... may be formed in the following two ways" - "two ways" are not very clear
-6. Page 5, left column, row 37. "This will be come ..." -> "This will become ..."
-7. Page 5, right column, row 48 (and the same for Appendix). "... the sampling process in 2" -> "... the sampling process in (2)"
-8. Page 5, right column, row 52 (and the same for Appendix). "... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t)$" -> "... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t) (3)$"
-9. Page 8, left column, row 7. "Prior indicated..." -> "Prior indicates..."
-10. Page 13, left column, row 23. Should it be "testing dataset"?
+}
+
+We have addressed this in our revised version.
+
+{\color{blue}
+3. Page 2, left column, rows 30-32. ``Methods to sample denoising adversarial autoencoders through Markov-Chain sampling''. Should they sample synthetic data points rather than autoencoders?
+}
+
+In our revised version we now say:
+\begin{quote}
+Methods to draw synthetic data samples from denoising adversarial autoencoders through Markov-Chain sampling;
+\end{quote}
+
+
+4. Page 3, left column, rows 9-12. ``In the second step, a random variable ... the Hadamard product'' - missing verb
+5. Page 3, left column, row 33. ``... may be formed in the following two ways'' - ``two ways'' are not very clear
+6. Page 5, left column, row 37. ``This will be come ...'' -> ``This will become ...''
+7. Page 5, right column, row 48 (and the same for Appendix). ``... the sampling process in 2'' -> ``... the sampling process in (2)''
+8. Page 5, right column, row 52 (and the same for Appendix). ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t)$'' -> ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t) (3)$''
+9. Page 8, left column, row 7. ``Prior indicated...'' -> ``Prior indicates...''
+10. Page 13, left column, row 23. Should it be ``testing dataset''?
 
 
 \end{document}
