--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -684,8 +684,9 @@ In our revised version we now say:
 Methods to draw synthetic data samples from denoising adversarial autoencoders through Markov-Chain sampling;
 \end{quote}
 
-
+{\color{blue}
 4. Page 3, left column, rows 9-12. ``In the second step, a random variable ... the Hadamard product'' - missing verb
+}
 
 In our revised version we now say:
 \begin{quote}
