--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -693,7 +693,10 @@ In our revised version we now say:
 In the second step, a random variable $\epsilon \sim \mathcal{N}(0,1)$ is drawn and the encoding is calculated as $z = \mu_\phi(x) + \sigma_\phi(x) \circ \epsilon$ where $\circ$ is the Hadamard product, see the VAE in Figure \ref{autoencoders}.
 \end{quote}
 
+{\color{blue}
 5. Page 3, left column, row 33. ``... may be formed in the following two ways'' - ``two ways'' are not very clear
+}
+
 6. Page 5, left column, row 37. ``This will be come ...'' -> ``This will become ...''
 7. Page 5, right column, row 48 (and the same for Appendix). ``... the sampling process in 2'' -> ``... the sampling process in (2)''
 8. Page 5, right column, row 52 (and the same for Appendix). ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t)$'' -> ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t) (3)$''
