add reason why we dont explicity say that z0 comes from the prior

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -603,7 +603,15 @@ We also say in the main body of the text, where we discuss our proposed sampling
 we draw an initial $z^{(0)}$ from any random distribution – we use a normal distribution for simplicity ... $x^{(0)}$ is the sample generated when $z^{(0)}$ is passed through the decoder.
 \end{quote}
 
+We did not want to say explicitly that the inital samples was drawn from the prior, as this may confuse some readers.
+
 In our revised version we also include celebA faces where $z^{(0)}$ is sampled from the prior, and there is a vivid difference between inital and final samples.\\
+
+% In our revised version we make the fact that $z^{(0)}$ is drawn from the prior in most cases, by adding the following
+
+% \begin{quote}
+% For synthesis the initial sample, $z$, is drawn from latent space, often the prior, 
+% \end{quote}
 }
 
 
