Response to ref eqn for transit operator

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -711,11 +711,27 @@ In the second step, a random variable $\epsilon \sim \mathcal{N}(0,1)$ is drawn 
 5. Page 3, left column, row 33. ``... may be formed in the following two ways'' - ``two ways'' are not very clear
 }
 
+{\color{blue}
 6. Page 5, left column, row 37. ``This will be come ...'' -> ``This will become ...''
+}
+
+We have addressed this in our revised version.
+
+{\color{blue}
 7. Page 5, right column, row 48 (and the same for Appendix). ``... the sampling process in 2'' -> ``... the sampling process in (2)''
+}
+
+We have addressed this in our revised version.
+
 8. Page 5, right column, row 52 (and the same for Appendix). ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t)$'' -> ``... by the transition operator, $T_{\theta, \phi}(z_{t+1}|z_t) (3)$''
+
+We have addressed this in our revised version.
+
 9. Page 8, left column, row 7. ``Prior indicated...'' -> ``Prior indicates...''
 10. Page 13, left column, row 23. Should it be ``testing dataset''?
+
+
+\section{Additional Changes}
 
 
 \end{document}
